--- a/_config.yml
+++ b/_config.yml
@@ -38,7 +38,7 @@ social:
   email: easydong02@gmail.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/username # change to your twitter homepage
+    #- https://twitter.com/username # change to your twitter homepage
     - https://github.com/easydong02 # change to your github homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
@@ -63,7 +63,7 @@ google_analytics:
 #     light  - Use the light color scheme
 #     dark   - Use the dark color scheme
 #
-theme_mode: dark
+theme_mode:
 
 # The CDN endpoint for images.
 # Notice that once it is assigned, the CDN url
