--- a/_config.yml
+++ b/_config.yml
@@ -28,8 +28,8 @@ url: "https://easydong02.github.io"
 github:
   username: easydong02 # change to your github username
 
-twitter:
-  username: twitter_username # change to your twitter username
+#twitter:
+#  username: twitter_username # change to your twitter username
 
 social:
   # Change to your full name.
